Fixed footer and assorted spacing

--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ h2 {
   font-family: "Expletus Sans", sans-serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 #header {
   height: 70px;
   display: flex;
@@ -61,7 +66,7 @@ h2 {
 }
 
 #main {
-  height: calc(100vh-170px);
+  min-height: calc(100vh - 170px);
   padding-bottom: 10px;
   display: flex;
   justify-content: center;
@@ -69,7 +74,7 @@ h2 {
 }
 
 #left {
-  width: calc(100%-300px);
+  min-width: 500px;
   padding-bottom: 10px;
   display: flex;
   flex-direction: column;
@@ -223,6 +228,10 @@ h2 {
 @media (max-width: 770px) {
   .hidemobile {
     display: none;
+  }
+
+  #left {
+    min-width: 250px;
   }
 
   #right {
